<feat> app名称多语言

--- a/SwiftTestAlfire/Resources/en.lproj/Localizable.strings
+++ b/SwiftTestAlfire/Resources/en.lproj/Localizable.strings
@@ -5,7 +5,11 @@
   Created by zph on 2021/7/27.
   
 */
+
+"CFBundleDisplayName" = "zhishuVideo";
+
 "homeKey" = "Home";
 "musicKey" = "music";
 "movieKey" = "movie";
-"searchKey" = "searchKey";
+"searchKey" = "search";
+"localKey" = "local";
